sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/reactive-resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-resume
  labels:
    app.kubernetes.io/name: reactive-resume
    app.kubernetes.io/instance: reactive-resume
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: reactive-resume
      app.kubernetes.io/instance: reactive-resume
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reactive-resume
        app.kubernetes.io/instance: reactive-resume
    spec:
      restartPolicy: Always
      serviceAccountName: reactive-resume-sa
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: reactive-resume
          image: ghcr.io/amruthpillai/reactive-resume:v5.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: reactive-resume-data
