sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/reactive-resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume
  labels:
    app.kubernetes.io/name: reactive-resume
    app.kubernetes.io/instance: reactive-resume
spec:
  selector:
    app.kubernetes.io/name: reactive-resume
    app.kubernetes.io/instance: reactive-resume
  ports:
  - port: 3000
    targetPort: 3000
    name: http
    protocol: TCP
