sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/reactive-resume/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reactive-resume
  namespace: reactive-resume
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: reactive-resume
      app.kubernetes.io/instance: reactive-resume
  ingress:
    # Allow traffic from Traefik Private
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    # Allow DNS lookups
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Allow connections to Vault
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow connections to Postgres (CNPG)
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: reactive-resume-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow intra-namespace communication
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: reactive-resume
    # Allow connections to internal Authentik service
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Allow egress to Traefik Public (Internal Ingress for SSO/OIDC)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-public
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow outbound HTTP/HTTPS for avatars, external fonts, etc.
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reactive-resume-db
  namespace: reactive-resume
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: reactive-resume-db
  ingress:
    # Allow traffic from Reactive Resume app
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: reactive-resume
            app.kubernetes.io/instance: reactive-resume
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow intra-cluster DB communication
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: reactive-resume-db
    # Allow traffic from CloudNativePG operator for health checks
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "5432"
              protocol: TCP
    # Allow VictoriaMetrics to scrape metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Allow intra-cluster DB communication
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: reactive-resume-db
    # Allow access to K8s API
    - toEntities:
        - kube-apiserver
    # Allow egress to S3 for Barman backups
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
